--- a/IptvAPP/app/src/main/res/layout/activity_player.xml
+++ b/IptvAPP/app/src/main/res/layout/activity_player.xml
@@ -1,3 +1,4 @@
+<!-- activity_player.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,8 +7,9 @@
 
     <WebView
         android:id="@+id/webView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="700dp"
+        android:layout_height="750dp"
         android:layout_gravity="center"
+        android:paddingBottom="20dp"
         android:scrollbars="none" />
 </LinearLayout>
